añado javascript a ejemplo1.html

--- a/ejercicio1.html
+++ b/ejercicio1.html
@@ -1,7 +1,8 @@
 <html>
-    
+    <script src="js/codigo.js"></script>
 <body>
     <p>Hola</p>
-    <p>Es viernessssss</p>
+    <p>Es Juevessssss</p>
+    <input type="button" onClick="saludo()" value="saludo"></input>
 </body>
 </html>
